[gd_scene load_steps=4 format=3 uid="uid://c0lsdubtvpjw2"]

[ext_resource type="Script" path="res://scripts/ExitGate.gd" id="1_cwriq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uikth"]
size = Vector2(100, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_4rx7d"]
radius = 70.0

[node name="ExitGate" type="StaticBody2D" groups=["exit_gates"]]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_cwriq")

[node name="Sprite2D" type="Sprite2D" parent="."]
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uikth")

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_4rx7d")

[node name="OpenProgress" type="ProgressBar" parent="."]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = -40.0
max_value = 1.0
show_percentage = false

[node name="EscapePosition" type="Marker2D" parent="."]
position = Vector2(0, -50)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Sounds" type="Node" parent="."]

[node name="PoweredSound" type="AudioStreamPlayer2D" parent="Sounds"]

[node name="OpeningSound" type="AudioStreamPlayer2D" parent="Sounds"]

[node name="OpenedSound" type="AudioStreamPlayer2D" parent="Sounds"]

[node name="EscapeSound" type="AudioStreamPlayer2D" parent="Sounds"]

[node name="StatusLabel" type="Label" parent="."]
offset_left = -60.0
offset_top = -80.0
offset_right = 60.0
offset_bottom = -57.0
horizontal_alignment = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = null 